Bug 359677 - colord causes crashes in kdeinit5 and kded5 in a Wayland session
Summary: colord causes crashes in kdeinit5 and kded5 in a Wayland session
Status: RESOLVED FIXED
Alias: None
Product: colord-kde
Classification: Unmaintained
Component: Daemon Module (KDED) (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords:
: 371754 371879 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-22 18:35 UTC by Mustafa Muhammad
Modified: 2016-11-04 08:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kded crash trace (4.54 KB, text/plain)
2016-02-22 18:35 UTC, Mustafa Muhammad
Details
kdeinit5 crash trace (4.03 KB, text/plain)
2016-02-22 18:36 UTC, Mustafa Muhammad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mustafa Muhammad 2016-02-22 18:35:13 UTC
colord causes crashes in kdeinit5 and kded5 on wayland session even if it is color correction is not enabled, I had to remove kde-colord to get rid of the crashes.
Here is the trace for kded5 and kdeinit5

Reproducible: Always

Steps to Reproduce:
1. Use Fedora23 with test updates (frameworks 5.19 and plasma 5.5.4)
2.
3.
Comment 1 Mustafa Muhammad 2016-02-22 18:35:46 UTC
Created attachment 97357 [details]
kded crash trace
Comment 2 Mustafa Muhammad 2016-02-22 18:36:16 UTC
Created attachment 97358 [details]
kdeinit5 crash trace
Comment 3 Daniel Nicoletti 2016-10-09 06:53:10 UTC
Git commit 13074b7a1234c9a182756f2bfba5756bb2283626 by Daniel Nicoletti.
Committed on 09/10/2016 at 06:52.
Pushed by dantti into branch 'master'.

Do not run KDED code on Wayland

M  +6    -0    colord-kded/ColorD.cpp

http://commits.kde.org/colord-kde/13074b7a1234c9a182756f2bfba5756bb2283626
Comment 4 Christoph Feck 2016-11-02 17:18:37 UTC
*** Bug 371879 has been marked as a duplicate of this bug. ***
Comment 5 David Faure 2016-11-04 08:30:56 UTC
*** Bug 371754 has been marked as a duplicate of this bug. ***