Do not run KDED code on Wayland

BUG: 359677